--- a/subgraph-payments/package.json
+++ b/subgraph-payments/package.json
@@ -21,13 +21,10 @@
     "@apollo/server": "^4.0.1",
     "@apollo/subgraph": "^2.1.3",
     "axios": "^1.1.3",
-    "date-fns": "^2.29.3",
     "graphql": "^16.6.0",
-    "graphql-tag": "^2.12.6",
-    "sequelize": "^6.28.0"
+    "graphql-tag": "^2.12.6"
   },
   "devDependencies": {
-    "nodemon": "^2.0.13",
-    "sqlite3": "^5.1.4"
+    "nodemon": "^2.0.13"
   }
 }
