--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "launch:staging-accounts": "rover subgraph publish Airlock-t9g9l6@staging  --schema ./subgraph-accounts/schema.graphql --name accounts --routing-url https://staging-airlock-accounts.com",
     "launch:staging-listings": "rover subgraph publish Airlock-t9g9l6@staging  --schema ./subgraph-listings/schema.graphql --name listings --routing-url https://staging-airlock-listings.com",
     "launch:staging-bookings": "rover subgraph publish Airlock-t9g9l6@staging  --schema ./subgraph-bookings/schema.graphql --name bookings --routing-url https://staging-airlock-bookings.com",
-    "launch:staging-reviews": "rover subgraph publish Airlock-t9g9l6@staging  --schema ./subgraph-reviews/schema.graphql --name reviews --routing-url https://staging-airlock-reviews.com5",
-    "launch:delete": "rover subgraph delete my-graph@my-variant --name subgraph-to-delete"
+    "launch:staging-reviews": "rover subgraph publish Airlock-t9g9l6@staging  --schema ./subgraph-reviews/schema.graphql --name reviews --routing-url https://staging-airlock-reviews.com",
+    "launch:staging-payments": "rover subgraph publish Airlock-t9g9l6@staging  --schema ./subgraph-payments/schema.graphql --name payments --routing-url https://staging-airlock-payments.com",
+    "launch:delete-subgraph": "rover subgraph delete my-graph@my-variant --name subgraph-to-delete"
   }
 }
