adding staging repo variables

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -21,6 +21,7 @@ jobs:
     env:
       APOLLO_KEY: ${{ secrets.APOLLO_KEY }}
       APOLLO_GRAPH_REF: ${{ secrets.APOLLO_GRAPH_REF}}
+      APOLLO_GRAPH_REF_STAGING: ${{secrets.APOLLO_GRAPH_REF_STAGING}}
       APOLLO_VCS_COMMIT: ${{ github.event.pull_request.head.sha }}
       SUBGRAPH: listings
 
@@ -38,4 +39,4 @@ jobs:
           echo "$HOME/.rover/bin" >> $GITHUB_PATH
       - name: Run check against staging variant
         run: |
-          rover subgraph check ${APOLLO_GRAPH_REF} --schema ./subgraph-${SUBGRAPH}/schema.graphql --name $SUBGRAPH
+          rover subgraph check ${APOLLO_GRAPH_REF_STAGING} --schema ./subgraph-${SUBGRAPH}/schema.graphql --name $SUBGRAPH
