--- a/subgraph-listings/package.json
+++ b/subgraph-listings/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type":"module",
   "engines": {
     "npm": ">=6.0.0",
     "node": ">=14.0.0 <=18"
@@ -18,8 +19,9 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/datasource-rest": "^4.3.2",
-    "@apollo/server": "^4.0.1",
+    "@apollo/server": "^4.3.1",
     "@apollo/subgraph": "^2.1.3",
+    "@as-integrations/aws-lambda": "^1.2.1",
     "axios": "^1.1.3",
     "date-fns": "^2.29.3",
     "graphql": "^16.6.0",
