accounts and listings can be deployed in lambdas

--- a/subgraph-accounts/serverless.yml
+++ b/subgraph-accounts/serverless.yml
@@ -3,7 +3,7 @@ service: apollo-lambda
 
 provider:
   name: aws
-  stage: staging-listings
+  stage: staging-accounts
   region: eu-west-1
   runtime: nodejs16.x
   httpApi:
