--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "launch:reviews": "rover subgraph publish Airlock-t9g9l6@current  --schema ./subgraph-reviews/schema.graphql --name reviews --routing-url http://localhost:4005",
     "launch:payments": "rover subgraph publish Airlock-t9g9l6@current  --schema ./subgraph-payments/schema.graphql --name payments --routing-url http://localhost:4006",
     "launch:staging-accounts": "rover subgraph publish Airlock-t9g9l6@staging  --schema ./subgraph-accounts/schema.graphql --name accounts --routing-url https://staging-airlock-accounts.com",
-    "launch:staging-listings": "rover subgraph publish Airlock-t9g9l6@staging  --schema ./subgraph-listings/schema.graphql --name listings --routing-url https://staging-airlock-listings.com",
+    "launch:staging-listings": "rover subgraph publish Airlock-t9g9l6@staging  --schema ./subgraph-listings/schema.graphql --name listings --routing-url https://a9ozbl8bfa.execute-api.eu-west-1.amazonaws.com/",
     "launch:staging-bookings": "rover subgraph publish Airlock-t9g9l6@staging  --schema ./subgraph-bookings/schema.graphql --name bookings --routing-url https://staging-airlock-bookings.com",
     "launch:staging-reviews": "rover subgraph publish Airlock-t9g9l6@staging  --schema ./subgraph-reviews/schema.graphql --name reviews --routing-url https://staging-airlock-reviews.com",
     "launch:staging-payments": "rover subgraph publish Airlock-t9g9l6@staging  --schema ./subgraph-payments/schema.graphql --name payments --routing-url https://staging-airlock-payments.com",
