--- a/subgraph-listings/package.json
+++ b/subgraph-listings/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type":"module",
   "engines": {
     "npm": ">=6.0.0",
     "node": ">=14.0.0 <=18"
@@ -21,6 +22,7 @@
     "@apollo/server": "^4.3.1",
     "@apollo/subgraph": "^2.1.3",
     "@as-integrations/aws-lambda": "^1.2.1",
+    "@vendia/serverless-express": "^4.10.1",
     "axios": "^1.1.3",
     "date-fns": "^2.29.3",
     "graphql": "^16.6.0",
