--- a/subgraph-reviews/serverless.yml
+++ b/subgraph-reviews/serverless.yml
@@ -1,5 +1,5 @@
 # This job deploys the code to the staging AWS Lambda app environment
-service: apollo-lambda-listings
+service: apollo-lambda-reviews
 
 provider:
   name: aws
