--- a/.github/workflows/staging-checks.yml
+++ b/.github/workflows/staging-checks.yml
@@ -37,14 +37,18 @@ jobs:
           # Add Rover to the $GITHUB_PATH so it can be used in another step
           # https://docs.github.com/en/actions/reference/workflow-commands-for-github-actions#adding-a-system-path
           echo "$HOME/.rover/bin" >> $GITHUB_PATH
-      - name: Run check against staging variant
+      - name: Run check for listings against staging variant
         run: |
           rover subgraph check ${APOLLO_GRAPH_REF_STAGING} --schema ./subgraph-listings/schema.graphql --name listings
+      - name: Run check for accounts against staging variant
         run: |
           rover subgraph check ${APOLLO_GRAPH_REF_STAGING} --schema ./subgraph-accounts/schema.graphql --name accounts
+      - name: Run check for reviews against staging variant
         run: |
           rover subgraph check ${APOLLO_GRAPH_REF_STAGING} --schema ./subgraph-reviews/schema.graphql --name reviews
+      - name: Run check for bookings against staging variant
         run: |
           rover subgraph check ${APOLLO_GRAPH_REF_STAGING} --schema ./subgraph-bookings/schema.graphql --name bookings
+      - name: Run check for payments against staging variant
         run: |
           rover subgraph check ${APOLLO_GRAPH_REF_STAGING} --schema ./subgraph-payments/schema.graphql --name payments
