--- a/.github/workflows/pusblish-schema-acccounts-staging.yml
+++ b/.github/workflows/pusblish-schema-acccounts-staging.yml
@@ -2,7 +2,6 @@
 name: Staging Publish Schema
 
 # this job runs after the Staging Deploy is completed
-on:
 workflow_run:
   workflows: ["Run schema checks"]
   types:
@@ -28,14 +27,18 @@ publish_schema:
         # Add Rover to the $GITHUB_PATH so it can be used in another step
         # https://docs.github.com/en/actions/reference/workflow-commands-for-github-actions#adding-a-system-path
         echo "$HOME/.rover/bin" >> $GITHUB_PATH
-    - name: Publish subgraph to staging registry
+    - name: Publish Listings subgraph to staging registry
       run: |
         rover subgraph publish ${APOLLO_GRAPH_REF_STAGING} --schema ./subgraph-listings.graphql --name listings
+    - name: Publish Accounts subgraph to staging registry
       run: |
         rover subgraph publish ${APOLLO_GRAPH_REF_STAGING} --schema ./subgraph-accounts.graphql --name accounts
+   - name: Publish Bookings subgraph to staging registry
       run: |
         rover subgraph publish ${APOLLO_GRAPH_REF_STAGING} --schema ./subgraph-bookings.graphql --name bookigs
+   - name: Publish Reviews subgraph to staging registry
       run: |
         rover subgraph publish ${APOLLO_GRAPH_REF_STAGING} --schema ./subgraph-reviews.graphql --name reviews
+   - name: Publish Payments subgraph to staging registry   
       run: |
         rover subgraph publish ${APOLLO_GRAPH_REF_STAGING} --schema ./subgraph-payments.graphql --name payments
