--- a/.github/workflows/pusblish-schemas-staging.yml
+++ b/.github/workflows/pusblish-schemas-staging.yml
@@ -2,6 +2,7 @@
 name: Staging Publish Schemas
 
 # this job runs after the Staging Deploy is completed
+on: push
 workflow_run:
   workflows: ["Run schema checks"]
   types:
