--- a/.github/workflows/pusblish-schemas-staging.yml
+++ b/.github/workflows/pusblish-schemas-staging.yml
@@ -8,7 +8,7 @@ on:
     types:
       - completed
   pull_request:
-    types: [opened, synchronize, edited]
+    types: [opened]
 
 jobs:
   publish_schema:
