removing doubel quotes

--- a/.github/workflows/pusblish-schemas-staging.yml
+++ b/.github/workflows/pusblish-schemas-staging.yml
@@ -4,7 +4,7 @@ name: Staging Publish Schemas
 # this job runs after the Staging Deploy is completed
 on:
   workflow_run:
-    workflows: ["Run schema checks"]
+    workflows: [Run schema checks]
     types: [completed]
 
 jobs:
