--- a/.github/workflows/staging-checks.yml
+++ b/.github/workflows/staging-checks.yml
@@ -4,6 +4,7 @@ name: Run schema checks
 # It runs for every PR opened, updated and edited
 on:
   pull_request:
+    types: [opened, synchronize, edited]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
