--- a/.github/workflows/staging-checks.yml
+++ b/.github/workflows/staging-checks.yml
@@ -9,6 +9,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   schema_checks:
+    name: schema_checks
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
