--- a/.github/workflows/deploy-apps.yaml
+++ b/.github/workflows/deploy-apps.yaml
@@ -22,7 +22,8 @@ jobs:
         uses: serverless/github-action@v3.1
         working-directory: ./subgraph-listings
         with:
-          args: deploy
+          args: -c "cd ./subgraph-listings && serverless deploy"
+          entrypoint: /bin/sh
         env:
           # SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
           # or if using AWS credentials directly
