--- a/.github/workflows/deploy-apps.yaml
+++ b/.github/workflows/deploy-apps.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: serverless deploy
         uses: serverless/github-action@v3.1
         with:
-          args: -c "cd ./subgraph-listings &&  deploy"
+          args: -c "cd ./subgraph-listings && serverless deploy"
           entrypoint: /bin/sh
         env:
           # SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
