--- a/.github/workflows/deploy-apps.yaml
+++ b/.github/workflows/deploy-apps.yaml
@@ -12,6 +12,11 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x]
+    env:
+      # SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
+      # or if using AWS credentials directly
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID}}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
@@ -21,10 +26,15 @@ jobs:
       - name: serverless deploy
         uses: serverless/github-action@v3.1
         with:
-          args: -c "cd ./subgraph-listings && serverless deploy && cd ./subgraph-accounts && serverless deploy"
+          args: -c "cd ./subgraph-listings && serverless deploy"
           entrypoint: /bin/sh
-        env:
-          # SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
-          # or if using AWS credentials directly
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID}}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      - name: serverless deploy
+        uses: serverless/github-action@v3.1
+        with:
+          args: -c "cd ./subgraph-bookings && serverless deploy"
+          entrypoint: /bin/sh
+      - name: serverless deploy
+        uses: serverless/github-action@v3.1
+        with:
+          args: -c "cd ./subgraph-accounts && serverless deploy"
+          entrypoint: /bin/sh
