--- a/.github/workflows/deploy-apps.yaml
+++ b/.github/workflows/deploy-apps.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: deploy accounts
         uses: serverless/github-action@v3.1
         with:
-          args: -c "cd ./subgraph-accounts && serverless deploy"
+          args: -c "cd ./subgraph-accounts && yarn install && serverless deploy"
           entrypoint: /bin/sh
       # - name: deploy reviews
       #   uses: serverless/github-action@v3.1
