--- a/monolith/package.json
+++ b/monolith/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^2.25.0",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
+    "localtunnel": "^2.0.2",
     "nodemon": "^2.0.12",
     "sequelize": "^6.9.0",
     "sqlite3": "^5.1.2",
