--- a/subgraph-listings/serverless.yml
+++ b/subgraph-listings/serverless.yml
@@ -13,7 +13,7 @@ functions:
     # Make sure your file path is correct!
     # (e.g., if your file is in the root folder use server.graphqlHandler )
     # The format is: <FILENAME>.<HANDLER>
-    handler: index.graphqlHandler
+    handler: src/index.graphqlHandler
     events:
       - httpApi:
           path: /
