--- a/subgraph-bookings/package.json
+++ b/subgraph-bookings/package.json
@@ -26,10 +26,10 @@
     "date-fns": "^2.29.3",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.28.0",
+    "sqlite3": "^5.1.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.13",
-    "sqlite3": "^5.1.4"
+    "nodemon": "^2.0.13"
   }
 }
